2016-10-12  Natalia Portillo  <claunia@claunia.com>

	* Commands/DumpMedia.cs:
	  Adds support for SCSI Streaming Devices (see #65).

2016-10-10  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Removed some spurious brackets.

2016-10-10  Natalia Portillo  <claunia@claunia.com>

	* DetectImageFormat.cs:
	  Add debug output.

2016-10-07  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.csproj:
	  Link new documentation files.

2016-09-05  Natalia Portillo  <claunia@claunia.com>

	* Commands/Ls.cs:
	* Commands/Verify.cs:
	* Core/Statistics.cs:
	* Commands/Decode.cs:
	* Commands/Entropy.cs:
	* Commands/Analyze.cs:
	* Commands/Compare.cs:
	* Commands/Formats.cs:
	* Commands/PrintHex.cs:
	* DetectImageFormat.cs:
	* DiscImageChef.csproj:
	* Commands/Checksum.cs:
	* Commands/DumpMedia.cs:
	* Commands/Configure.cs:
	* Commands/Statistics.cs:
	* Commands/ExtractFiles.cs:
	* Commands/CreateSidecar.cs:
	  Added filters.

	* Plugins.cs:
	  Sorted plugins lists.

2016-08-27  Natalia Portillo  <claunia@claunia.com>

	* DetectImageFormat.cs:
	  Use UNIX line endings.

2016-08-26  Natalia Portillo  <claunia@claunia.com>

	* Commands/ExtractFiles.cs:
	  Corrected behaviour when volume name is missing, null or
	  empty.

2016-08-18  Natalia Portillo  <claunia@claunia.com>

	* Commands/Compare.cs:
	  Added field for drive firmware revision.

	* Commands/CreateSidecar.cs:
	  If drive image contains information about the dumping drive,
	  use it.
	Added subchannel types for Q only.

2016-08-09  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.csproj:
	  Bumped version to 3.2.99.2.

2016-08-08  Natalia Portillo  <claunia@claunia.com>

	* Commands/CreateSidecar.cs:
	  Added points for skipping whole image checksum on debugging.
	Track starts at index 0.

2016-08-07  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.csproj:
	  Public beta release 3.2.99.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs: